2006-04-15  Vlad Seryakov  <seryakov@users.sf.net>

	* include/nsthread.h: Introduced new error code NS_FTAL
        * nsd/driver.c: Made handling UDP driver more reliably against
        QoS attacks and error handling.
        
2006-04-14  Vlad Seryakov  <seryakov@users.sf.net>

	* nsd/tclinit.c:
        * nsd/tclcmds.c: Added new Tcl command ns_tls for
        thread specific local caches. Tcl tls is ns_set structure,
        so thread specific storage is key value pairs.

2006-04-14  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* tests/ns_gifsize.test:
	* tests/ns_jpegsize.test: Fixed to match new error messages

	* nsd/cache.c: Fixed Ns_CacheWaitCreateEntry() NOT to delete
	existing cache entry in case entry is expired.
	This is one possible fix for this call, as it was trashing 
	memory by reusing already deleted (expired) entries before.
	Another possible fix is to delete and re-create expired
	entry, but this costs more time, although it may be a more
	correct thing to do.

2006-04-13  Vlad Seryakov  <seryakov@users.sf.net>

	* nsd/tclcache.c: make sure the value is zero ended

2006-04-13  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* nsd/tclimg.c: Added processing for PNG files. Also added
	commands to compute image type, mimetype and size regardless
	of the image type, by performing internal magic lookup to
	decide which type of image they are handling.

	* nsd/tclcmds.c: Added ns_imgsize, ns_imgtype, ns_imgmime
	commands. These commands operate on any supported image: 
	gif, png and jpeg. The ns_pngsize is added to complete 
	ns_jpegsize and ns_gifsize set, although those are deprecated
	in favour of more simple ns_img[].
	
2006-04-06  Vlad Seryakov  <seryakov@users.sf.net>

	* include/ns.h:
	* nsd/sock.c: Added Ns_SockWait function for compatibility reasons,
	i.e. nsopenssl uses this.

	* nsd/tclcache.c: extar byte allocating is not necessary

2006-04-05  Vlad Seryakov  <seryakov@users.sf.net>
